[package]
name    = "freeimage"
authors = [ "Arturo Castro <mail@arturocastro.net>" ]
description = "Rust idiomatic bindings for FreeImage"
license = "MIT"
homepage = "https://github.com/arturoc/freeimage-rs"
repository = "https://github.com/arturoc/freeimage-rs"
version = "0.1.6"

[lib]
name = "freeimage"
path = "src/lib.rs"

[dependencies]
enum_primitive = "0.1"
num-traits = "0.2"
freeimage-sys = "3.18.0"
libc = "0.2"

